[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Enemy/Enemy3.gd" type="Script" id=1]
[ext_resource path="res://images/spacestation.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 28.8335

[node name="Enemy3" type="Node2D"]

[node name="Enemy3Body" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy3Body"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Enemy3Body"]
modulate = Color( 1, 0.490196, 0.490196, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="shoot_ray" type="RayCast2D" parent="Enemy3Body"]
enabled = true
cast_to = Vector2( 1000, 0 )
